--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
+    "recharts": "^2.13.0",
     "stripe": "^17.2.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
